[package]
name = "stables-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "stables"
path = "src/main.rs"

[dependencies]
stables-agent.workspace = true
stables-control.workspace = true
stables-core.workspace = true
